--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ model1.h5
 model2.h5
 self_supervised_model_weights.weights.h5
 self_supervised_model_with_multi_scale.weights.h5
+downstream_model_weights.h5
